--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
 <!-- 🔑 FRONTEND GOOGLE KEY – KUN MAPS + PLACES -->
 <script
-  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC4KVPzijWJug6VZBGsnBsDBXiuRvUR60o=places&language=no"
+  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC4KVPzijWJug6VZBGsnBsDBXiuRvUR60o&libraries=places&language=no"
   async defer>
 </script>
 
