--- a/index.html
+++ b/index.html
@@ -3,199 +3,239 @@
 <head>
   <meta charset="UTF-8" />
   <title>🏠 MinPris – tilbudskalkulator</title>
-
-  <!-- Google Maps JS + Places -->
-  <script
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC4KVPzijWJug6VZBGsnBsDBXiuRvUR60o&libraries=places&language=no"
-    async
-    defer
-  ></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background: #f5f5f5;
-      padding: 20px;
+      font-family: system-ui, sans-serif;
+      background: #f4f6fb;
+      padding: 16px;
     }
-    .card {
-      max-width: 600px;
+    .box {
+      max-width: 760px;
       margin: auto;
       background: white;
       padding: 20px;
-      border-radius: 10px;
+      border-radius: 14px;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.1);
     }
-    input, textarea, button {
+    label {
+      font-weight: 600;
+      display: block;
+      margin-top: 14px;
+    }
+    input, textarea {
       width: 100%;
-      margin-top: 8px;
-      padding: 10px;
-      font-size: 16px;
+      padding: 12px;
+      margin-top: 6px;
+      border-radius: 10px;
+      border: 1px solid #ccc;
+      font-size: 15px;
     }
     button {
-      background: #4f46e5;
-      color: white;
+      width: 100%;
+      padding: 14px;
+      margin-top: 14px;
+      font-size: 15px;
+      font-weight: 600;
+      border-radius: 12px;
       border: none;
-      border-radius: 6px;
       cursor: pointer;
     }
-    button:hover {
-      background: #4338ca;
+    .dark { background:#111827; color:white; }
+    .blue { background:#2563eb; color:white; }
+    pre {
+      background:#f1f5f9;
+      padding:14px;
+      border-radius:10px;
+      white-space:pre-wrap;
+      margin-top:10px;
     }
-    .result {
-      margin-top: 15px;
-      background: #eef;
-      padding: 10px;
-      border-radius: 6px;
+    .top-option {
+      display: flex;
+      align-items: center;
+      gap: 8px;
+      margin-bottom: 10px;
+      font-weight: 600;
     }
   </style>
 </head>
+
 <body>
+<div class="box">
 
-<div class="card">
-  <h2>🏠 MinPris – tilbudskalkulator</h2>
+<h1>🏠 MinPris – tilbudskalkulator</h1>
 
-  <label>Firmaadresse</label>
-  <input id="start" placeholder="F.eks Storgata 1, Oslo" />
-
-  <label>Kundeadresse</label>
-  <input id="end" placeholder="F.eks Sandvika" />
-
-  <label>
-    <input type="checkbox" id="turRetur" checked />
-    Tur / retur
-  </label>
-
-  <button onclick="beregnKm()">📏 Beregn kilometer</button>
-
-  <div class="result" id="kmResultat"></div>
-
-  <hr />
-
-  <label>Timepris (NOK)</label>
-  <input id="timepris" type="number" value="750" />
-
-  <label>Timer totalt</label>
-  <input id="timer" type="number" value="15" />
-
-  <label>Pris per km (NOK)</label>
-  <input id="kmPris" type="number" value="15" />
-
-  <label>Est. bompenger per dag (NOK)</label>
-  <input id="bomPerDag" type="number" placeholder="F.eks 250" />
-
-  <label>Avfall (NOK)</label>
-  <input id="avfall" type="number" value="0" />
-
-  <label>Materiell / forbruk (NOK)</label>
-  <input id="materiell" type="number" value="0" />
-
-  <label>HMS-forbruk per dag (NOK)</label>
-  <input id="hmsPerDag" type="number" value="0" />
-
-  <button onclick="genererTilbud()">🧾 Generer tilbudstekst</button>
-
-  <textarea id="tilbud" rows="14" placeholder="Tilbudstekst kommer her…"></textarea>
+<!-- ✅ TUR / RETUR HELT ØVERST -->
+<div class="top-option">
+  <input type="checkbox" id="turRetur" checked />
+  <label for="turRetur" style="margin:0;">Tur / retur</label>
 </div>
 
-<script>
-let kmPerDag = 0;
-let dager = 0;
+<!-- 1️⃣ ARBEIDSBESKRIVELSE -->
+<label>Arbeidsbeskrivelse</label>
+<textarea
+  id="beskrivelse"
+  rows="4"
+  placeholder="Beskriv jobben, f.eks: 40t riving, 20t rengjøring">
+</textarea>
 
-// Autocomplete
+<!-- 2️⃣ TIMEPRIS -->
+<label>Timepris (kr)</label>
+<input id="timepris" type="number" />
+
+<!-- 3️⃣ ADRESSER + KM -->
+<label>Firmaadresse</label>
+<input id="firmaadresse" type="text" placeholder="F.eks: Storgata 1, Oslo" />
+
+<label>Kundeadresse</label>
+<input id="kundeadresse" type="text" placeholder="F.eks: Karl Johans gate 10, Oslo" />
+
+<button class="blue" onclick="beregnKm()">Beregn kilometer</button>
+
+<label>Kilometer per dag</label>
+<input id="kmPerDag" type="number" />
+
+<label>Pris per km (kr)</label>
+<input id="prisPerKm" type="number" value="15" />
+
+<!-- 4️⃣ BOMPENGER -->
+<label>Estimerte bompenger per dag (kr)</label>
+<input id="bomPerDag" type="number" placeholder="F.eks 250" />
+
+<!-- 5️⃣ ØVRIGE KOSTNADER -->
+<label>Avfall (kr)</label>
+<input id="avfall" type="number" value="0" />
+
+<label>Materiell / forbruk (kr)</label>
+<input id="materiell" type="number" value="0" />
+
+<label>HMS-forbruk per dag (kr)</label>
+<input id="hms" type="number" value="0" />
+
+<!-- 6️⃣ BEREGN + AI -->
+<button class="dark" onclick="beregn()">Beregn</button>
+<button class="blue" id="aiBtn" onclick="genererTilbud()" disabled>
+  Generer tilbudstekst
+</button>
+
+<h3>Resultat</h3>
+<pre id="resultat"></pre>
+
+<h3>Tilbudstekst</h3>
+<pre id="tilbud"></pre>
+
+</div>
+
+<!-- GOOGLE MAPS FRONTEND KEY -->
+<script
+  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC4KVPzijWJug6VZBGsnBsDBXiuRvUR60o&libraries=places&language=no&callback=initAutocomplete"
+  async defer>
+</script>
+
+<script>
+let kalkyle = null;
+
+/* AUTOCOMPLETE */
 function initAutocomplete() {
-  new google.maps.places.Autocomplete(document.getElementById("start"), {
+  new google.maps.places.Autocomplete(firmaadresse, {
     componentRestrictions: { country: "no" }
   });
-  new google.maps.places.Autocomplete(document.getElementById("end"), {
+  new google.maps.places.Autocomplete(kundeadresse, {
     componentRestrictions: { country: "no" }
   });
 }
 
-window.initAutocomplete = initAutocomplete;
-setTimeout(initAutocomplete, 1000);
-
-// Beregn km via backend
+/* KM-BEREGNING */
 async function beregnKm() {
-  const start = document.getElementById("start").value;
-  const end = document.getElementById("end").value;
-  const turRetur = document.getElementById("turRetur").checked;
+  const fra = firmaadresse.value;
+  const til = kundeadresse.value;
+
+  if (!fra || !til) {
+    alert("Fyll inn begge adresser");
+    return;
+  }
 
   const res = await fetch("/api/route", {
     method: "POST",
     headers: { "Content-Type": "application/json" },
-    body: JSON.stringify({ start, end })
+    body: JSON.stringify({ start: fra, end: til })
   });
 
   const data = await res.json();
 
   let km = data.km;
-  if (turRetur) km *= 2;
+  if (turRetur.checked) km *= 2;
 
-  kmPerDag = km;
-  document.getElementById("kmResultat").innerText =
-    Avstand per dag: ${km.toFixed(1)} km;
+  kmPerDag.value = km.toFixed(1);
 }
 
-// Generer tilbud
-function genererTilbud() {
-  const timepris = +timeprisInput.value;
-  const timer = +timerInput.value;
-  const kmPris = +kmPrisInput.value;
-  const bomPerDag = +bomPerDagInput.value || 0;
-  const avfall = +avfallInput.value;
-  const materiell = +materiellInput.value;
-  const hmsPerDag = +hmsPerDagInput.value;
+/* TOTALBEREGNING */
+function beregn() {
+  const timer =
+    (beskrivelse.value.match(/(\d+)\s*t/gi) || [])
+      .map(x => Number(x.replace(/\D/g,"")))
+      .reduce((a,b)=>a+b,0);
 
-  dager = Math.ceil(timer / 7.5);
+  const dager = Math.max(1, Math.ceil(timer / 7.5));
 
-  const arbeid = timer * timepris;
-  const kjøring = kmPerDag * kmPris * dager;
-  const bom = bomPerDag * dager;
-  const hms = hmsPerDag * dager;
+  const arbeid = timer * Number(timepris.value||0);
+  const kjøring = dager * Number(kmPerDag.value||0) * Number(prisPerKm.value||0);
+  const bom = dager * Number(bomPerDag.value||0);
+  const hmsTot = dager * Number(hms.value||0);
+  const avf = Number(avfall.value||0);
+  const mat = Number(materiell.value||0);
 
-  const total = arbeid + kjøring + bom + hms + avfall + materiell;
-  const mva = total * 0.25;
+  const totalEks = arbeid + kjøring + bom + hmsTot + avf + mat;
+  const mva = totalEks * 0.25;
+  const totalInk = totalEks + mva;
 
-  tilbud.value = `
-Tilbud – estimert pris
+  kalkyle = {
+    beskrivelse: beskrivelse.value,
+    timer,
+    dager,
+    arbeid,
+    kjøring,
+    bom,
+    avfall: avf,
+    materiell: mat,
+    hms: hmsTot,
+    totalEksMva: totalEks,
+    totalInkMva: totalInk,
+    timepris: Number(timepris.value),
+    kmPerDag: Number(kmPerDag.value)
+  };
 
-Arbeid:
-– ${timer} timer × ${timepris} kr = ${arbeid.toFixed(0)} kr
+  resultat.textContent =
+`Arbeidsomfang:
+${timer} timer over ${dager} dag(er)
 
-Kjøring:
-– ${kmPerDag.toFixed(1)} km per dag
-– ${dager} dager
-– ${kmPris} kr/km
-= ${kjøring.toFixed(0)} kr
+Arbeid: ${arbeid} kr
+Kjøring: ${kjøring} kr
+Est. bompenger: ${bom} kr
+Avfall: ${avf} kr
+Materiell: ${mat} kr
+HMS: ${hmsTot} kr
 
-Estimerte bompenger:
-– ${bomPerDag} kr per dag × ${dager} dager
-= ${bom.toFixed(0)} kr
+Totalt eks. mva: ${Math.round(totalEks)} kr
+Totalt inkl. mva: ${Math.round(totalInk)} kr`;
 
-HMS-forbruk:
-– ${hmsPerDag} kr per dag × ${dager} dager
-= ${hms.toFixed(0)} kr
-
-Avfall: ${avfall} kr  
-Materiell/forbruk: ${materiell} kr  
-
-Sum eks. mva: ${total.toFixed(0)} kr  
-Mva (25%): ${mva.toFixed(0)} kr  
-
-Sum inkl. mva: ${(total + mva).toFixed(0)} kr
-
-Merk:
-Tilbudet er basert på estimerte mengder og kan justeres ved endringer i omfang.
-`;
+  aiBtn.disabled = false;
 }
 
-// Shortcuts
-const timeprisInput = document.getElementById("timepris");
-const timerInput = document.getElementById("timer");
-const kmPrisInput = document.getElementById("kmPris");
-const bomPerDagInput = document.getElementById("bomPerDag");
-const avfallInput = document.getElementById("avfall");
-const materiellInput = document.getElementById("materiell");
-const hmsPerDagInput = document.getElementById("hmsPerDag");
+/* AI */
+async function genererTilbud() {
+  tilbud.textContent = "Genererer tilbudstekst…";
+
+  const res = await fetch("/api/ai", {
+    method: "POST",
+    headers: { "Content-Type": "application/json" },
+    body: JSON.stringify(kalkyle)
+  });
+
+  const data = await res.json();
+  tilbud.textContent = data.text || "Ingen tekst returnert";
+}
 </script>
 
 </body>
