--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="no">
 <head>
@@ -32,6 +31,7 @@
       border-radius: 10px;
       border: 1px solid #ccc;
       font-size: 15px;
+      box-sizing: border-box;
     }
     button {
       width: 100%;
@@ -45,7 +45,6 @@
     }
     .dark { background:#111827; color:white; }
     .blue { background:#2563eb; color:white; }
-    .danger { background:#e11d48; color:white; }
     .success { background:#16a34a; color:white; }
 
     pre {
@@ -67,6 +66,27 @@
       width: auto;
       margin: 0;
     }
+
+    /* 🔹 Arbeidsbeskrivelse */
+    .textarea-wrapper {
+      position: relative;
+    }
+    .start-new-btn {
+      position: absolute;
+      top: 8px;
+      right: 8px;
+      padding: 4px 8px;
+      font-size: 12px;
+      border-radius: 999px;
+      background: #e5e7eb;
+      color: #111827;
+      cursor: pointer;
+      opacity: 0.8;
+    }
+    .start-new-btn:hover {
+      opacity: 1;
+      background: #d1d5db;
+    }
   </style>
 </head>
 
@@ -77,15 +97,22 @@
 
 <!-- 1️⃣ ARBEIDSBESKRIVELSE -->
 <label>Arbeidsbeskrivelse</label>
-<textarea
-  id="beskrivelse"
-  rows="4"
-  placeholder="Beskriv jobben, f.eks: 40t riving, 20t rengjøring">
-</textarea>
 
-<button type="button" class="danger" onclick="slettBeskrivelse()">
-  Slett arbeidsbeskrivelse
-</button>
+<div class="textarea-wrapper">
+  <textarea
+    id="beskrivelse"
+    rows="4"
+    placeholder="Beskriv jobben, f.eks: bad - 24t riving, 10t sanering">
+  </textarea>
+
+  <button
+    type="button"
+    class="start-new-btn"
+    title="Start ny arbeidsbeskrivelse"
+    onclick="startNyBeskrivelse()">
+    Start ny
+  </button>
+</div>
 
 <!-- 2️⃣ TIMEPRIS -->
 <label>Timepris (kr)</label>
@@ -160,8 +187,8 @@ beskrivelseEl.addEventListener("input", () => {
   localStorage.setItem("minpris_beskrivelse", beskrivelseEl.value);
 });
 
-function slettBeskrivelse() {
-  if (!confirm("Vil du slette arbeidsbeskrivelsen?")) return;
+function startNyBeskrivelse() {
+  if (!confirm("Starte ny arbeidsbeskrivelse?")) return;
   beskrivelseEl.value = "";
   localStorage.removeItem("minpris_beskrivelse");
 }
@@ -221,12 +248,6 @@ function beregn() {
     beskrivelse: beskrivelse.value,
     timer,
     dager,
-    arbeid,
-    kjøring,
-    bom,
-    avfall: avf,
-    materiell: mat,
-    hms: hmsTot,
     totalEksMva: totalEks,
     totalInkMva: totalInk
   };
